changed up notebook for timeit

--- a/model_validation/Model_Validation.ipynb
+++ b/model_validation/Model_Validation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -129,10 +129,10 @@
     {
      "data": {
       "text/plain": [
-       "4.061245822005731"
+       "6.551789936000006"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,6 +145,37 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predictA(artist,track):\n",
+    "    similar_songs = []\n",
+    "    baseurl = 'https://open.spotify.com/track/'\n",
+    "    try: \n",
+    "        results = songdf[(songdf[\"artist\"].str.contains(artist,case=False,regex=True)) & (songdf[\"track\"].str.contains(track,case=False,regex=True))]\n",
+    "        sourcetrackartist = results['artist'].iloc[0]\n",
+    "        sourcetracktrack = results['track'].iloc[0]\n",
+    "        sourcetrackid = results['songid'].iloc[0]\n",
+    "        results = results.drop([\"artist\",\"track\",\"duration_ms\",\"songid\"],axis=1)\n",
+    "        scalar = load(rootpath + 'Flask_API/SOUNDDRIP/models/scalar2.joblib')\n",
+    "        dataframe_scaled = scalar.transform(results)\n",
+    "        model = load(rootpath + 'Flask_API/SOUNDDRIP/models/model2.joblib')\n",
+    "        results = model.kneighbors([dataframe_scaled][0])[1]\n",
+    "        song_id_list = load('./song_id_array.pkl')\n",
+    "        for song_row in results[0][1:]:\n",
+    "            song_id = song_id_list[song_row]\n",
+    "            similar_songs.append(baseurl + song_id)\n",
+    "        print(f'Source URL for \"{sourcetracktrack}\" by \"{sourcetrackartist}\":\\n')\n",
+    "        print(f'{baseurl + sourcetrackid} \\n')\n",
+    "        print(f' Paste Results into your browser or Spotify desktop app: \\n')\n",
+    "        return similar_songs\n",
+    "    except:\n",
+    "        print(\"Song not available try another\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -161,35 +192,16 @@
     {
      "data": {
       "text/plain": [
-       "['https://open.spotify.com/track/1GpBKCgTE36OcXo31Lczfm',\n",
-       " 'https://open.spotify.com/track/69c3Wl5T403bSguMAChBrQ',\n",
-       " 'https://open.spotify.com/track/5Uj8HsBIMHazq25i01MTBr',\n",
-       " 'https://open.spotify.com/track/1mNSRoPAoN46kkWrpPNPbn',\n",
-       " 'https://open.spotify.com/track/5bozEdb0TmHWm2l3WycChm',\n",
-       " 'https://open.spotify.com/track/7bx61QNxXYml26aIWs1qgq',\n",
-       " 'https://open.spotify.com/track/4ttkCOm2gP96QgZ4wIMVup',\n",
-       " 'https://open.spotify.com/track/3Mf07yl9BYhL3q2wZdxx6E',\n",
-       " 'https://open.spotify.com/track/7t0GWb6NnzQ71vXE8Ck8NQ',\n",
-       " 'https://open.spotify.com/track/67rre5G3WNEQVB83vaZ4Ik',\n",
-       " 'https://open.spotify.com/track/3FiWMIJGF3bBKTlfgMtSDH',\n",
-       " 'https://open.spotify.com/track/3jRHXv5LZLQ8LMVDHR4UYS',\n",
-       " 'https://open.spotify.com/track/4w74JUePQ6FfaUlpLAG0En',\n",
-       " 'https://open.spotify.com/track/7s8aaehJPGjlsYS2sms535',\n",
-       " 'https://open.spotify.com/track/5RtkSGx5aSrPQpdwUq5bfr',\n",
-       " 'https://open.spotify.com/track/7BouMSNhqPKQr4UElON59R',\n",
-       " 'https://open.spotify.com/track/3xVYHRXGgMISYnyGee9Lkb',\n",
-       " 'https://open.spotify.com/track/5cNw7IwtzcZhMA8CDVKTRB',\n",
-       " 'https://open.spotify.com/track/2Q4u2zDWQfWc2zgPSEYacO',\n",
-       " 'https://open.spotify.com/track/0tP6mrtcLOYPDmE0QNA1Q7']"
+       "2.737236714000005"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "predict(\"John Prine\",\"In Spite\")"
+    "get_runtime('predictA(\"John Prine\",\"In Spite\")')"
    ]
   },
   {
@@ -257,6 +269,15 @@
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "get_runtime('load(\"./song_id_array.pkl\")')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "get_runtime('load(\"./song_id_array.pkl\")')"
    ]
