update tables code

--- a/unique-song-reqs/User_Table_DB_Updates.ipynb
+++ b/unique-song-reqs/User_Table_DB_Updates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,19 +12,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reconnect():\n",
-    "    # create connection and cursor    \n",
+    "# def reconnect():\n",
+    "#     # create connection and cursor    \n",
+    "#     conn = ps.connect(host=POSTGRES_ADDRESS,\n",
+    "#                       database=POSTGRES_DBNAME,\n",
+    "#                       user=POSTGRES_USERNAME,\n",
+    "#                       password=POSTGRES_PASSWORD,\n",
+    "#                       port=POSTGRES_PORT)\n",
+    "#     cur = conn.cursor()\n",
+    "#     return cur"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reconnect:\n",
     "    conn = ps.connect(host=POSTGRES_ADDRESS,\n",
-    "                      database=POSTGRES_DBNAME,\n",
-    "                      user=POSTGRES_USERNAME,\n",
-    "                      password=POSTGRES_PASSWORD,\n",
-    "                      port=POSTGRES_PORT)\n",
-    "    cur = conn.cursor()\n",
-    "    return cur"
+    "                  database=POSTGRES_DBNAME,\n",
+    "                  user=POSTGRES_USERNAME,\n",
+    "                  password=POSTGRES_PASSWORD,\n",
+    "                  port=POSTGRES_PORT)\n",
+    "    cur = conn.cursor()"
    ]
   },
   {
@@ -65,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -74,14 +89,36 @@
        "[]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cur = reconnect()\n",
     "query = \"\"\"SELECT * FROM users;\"\"\"\n",
+    "\n",
+    "cur.execute(query)\n",
+    "cur.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"\"\"SELECT * FROM recommendations\"\"\"\n",
     "\n",
     "cur.execute(query)\n",
     "cur.fetchall()"
@@ -103,16 +140,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cur = reconnect()\n",
     "cur.execute(\"\"\"CREATE TABLE recommendations\n",
-    "                (userID integer, \n",
-    "                songID integer,\n",
+    "                (id serial PRIMARY KEY,\n",
+    "                userID varchar(50), \n",
+    "                songID varchar(50),\n",
     "                recDate DATE \n",
-    "                );\"\"\")\n",
+    "                )\"\"\")\n",
+    "# Commit table creation\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur.execute(\"\"\"CREATE TABLE account(\n",
+    "               user_id serial PRIMARY KEY,\n",
+    "               username VARCHAR (50) UNIQUE NOT NULL,\n",
+    "               password VARCHAR (50) NOT NULL,\n",
+    "               email VARCHAR (355) UNIQUE NOT NULL,\n",
+    "               created_on TIMESTAMP NOT NULL,\n",
+    "               last_login TIMESTAMP\n",
+    "               );\"\"\")\n",
     "# Commit table creation\n",
     "conn.commit()"
    ]
@@ -122,7 +177,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cursor.execute(\"\"\"CREATE TABLE survival(\n",
+    "id SERIAL PRIMARY KEY,\n",
+    "survived integer)\"\"\")"
+   ]
   }
  ],
  "metadata": {
