added notebook for exploring genre data in prep for encoding

--- a/data_collection/Adding Genre.ipynb
+++ b/data_collection/Adding Genre.ipynb
@@ -780,7 +780,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump(df, open( \"./final_data/DF_v3.pkl\", \"wb\" ) )"
+    "pickle.load(df, open( \"./final_data/DF_v3.pkl\", \"wb\" ) )"
    ]
   },
   {
