updating Mugils's genre encoding notebook

--- a/model_notebooks/genre_encoding.ipynb
+++ b/model_notebooks/genre_encoding.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
     "\n",
     "\n",
-    "with open('DF_v3.pkl', 'rb') as f:\n",
-    "    data = pickle.load(f)"
+    "with open('./DF_v3.pkl', 'rb') as f:\n",
+    "    df = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "6                             ['swedish indie rock']  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,47 +210,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['baroque', 'classical', 'early music', 'german baroque']             3654\n",
-       "['classical', 'classical era']                                        1907\n",
-       "['cartoon','children's music']                                        1468\n",
-       "['smooth jazz']                                                       1274\n",
-       "['edm', 'progressive house', 'trance']                                1131\n",
-       "                                                                      ... \n",
-       "['carnatic vocal', 'filmi', 'indian classical']                          1\n",
-       "['vintage spanish pop']                                                  1\n",
-       "['classic israeli pop']                                                  1\n",
-       "['british modern classical', 'classic turkish pop', 'light music']       1\n",
-       "['cumbia pop', 'perreo']                                                 1\n",
+       "['baroque', 'classical', 'early music', 'german baroque']       3654\n",
+       "['classical', 'classical era']                                  1907\n",
+       "['cartoon','children's music']                                  1468\n",
+       "['smooth jazz']                                                 1274\n",
+       "['edm', 'progressive house', 'trance']                          1131\n",
+       "                                                                ... \n",
+       "['birmingham hip hop', 'uk hip hop']                               1\n",
+       "['german techno', 'minimal techno', 'schranz', 'tech house']       1\n",
+       "['cedm', 'electronica cristiana']                                  1\n",
+       "['doomcore', 'power noise']                                        1\n",
+       "['trad jazz catala']                                               1\n",
        "Name: genres, Length: 20720, dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.genres.value_counts()"
+    "df[\"genres\"].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df = data"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,6 +260,26 @@
     "        genre = genre.strip(\"]\",)\n",
     "        genre = genre.strip()\n",
     "        all_genres.append(genre)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2110517"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(all_genres)"
    ]
   },
   {
@@ -2048,9 +2066,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "sounddrip",
+   "display_name": "model_notebooks",
    "language": "python",
-   "name": "sounddrip"
+   "name": "model_notebooks"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2062,7 +2080,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
