--- a/model_notebooks/genre_encoding.ipynb
+++ b/model_notebooks/genre_encoding.ipynb
@@ -1372,6 +1372,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DBSCAN Attempt - Takes too long on local machine - Will try Sagemaker"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 94,
    "metadata": {},
@@ -1379,7 +1386,7 @@
    "source": [
     "from sklearn.cluster import DBSCAN\n",
     "\n",
-    "dbscan = DBSCAN(eps=3, metric='euclidean', min_samples=50, n_jobs=4) "
+    "dbscan = DBSCAN(eps=3, metric='euclidean', min_samples=50, n_jobs=-1) "
    ]
   },
   {
@@ -3733,7 +3740,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
