updated notebooks for prep for flask deployment

--- a/model_notebooks/genre_encoding.ipynb
+++ b/model_notebooks/genre_encoding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,33 +10,33 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "# with open('./DF_genres_hashed.pkl', 'rb') as f:\n",
-    "#     df = pickle.load(f)"
+    "with open('./DF_genres_hashed.pkl', 'rb') as f:\n",
+    "    df = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['baroque', 'classical', 'early music', 'german baroque']    3654\n",
-       "['classical', 'classical era']                               1907\n",
-       "['cartoon','children's music']                               1468\n",
-       "['smooth jazz']                                              1274\n",
-       "['edm', 'progressive house', 'trance']                       1131\n",
-       "                                                             ... \n",
-       "['singing bowl']                                                1\n",
-       "['dark post-punk', 'miami indie']                               1\n",
-       "['uk stoner rock']                                              1\n",
-       "['deep classic garage rock']                                    1\n",
-       "['brostep', 'dubstep', 'filthstep', 'zapstep']                  1\n",
+       "['baroque', 'classical', 'early music', 'german baroque']     3654\n",
+       "['classical', 'classical era']                                1907\n",
+       "['cartoon','children's music']                                1468\n",
+       "['smooth jazz']                                               1274\n",
+       "['edm', 'progressive house', 'trance']                        1131\n",
+       "                                                              ... \n",
+       "['alternative r&b', 'deep pop r&b', 'trap soul']                 1\n",
+       "['chinese indie']                                                1\n",
+       "['perreo', 'pop reggaeton', 'reggaeton', 'reggaeton flow']       1\n",
+       "['funk carioca', 'sertanejo pop']                                1\n",
+       "['banda', 'deep regional mexican', 'norteno']                    1\n",
        "Name: genres, Length: 20720, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
        "[5 rows x 68 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
        "2110517"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,11 +302,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_genres = pd.DataFrame(all_genres,columns=['genres'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Picking DF_Genres Dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(df_genres, open(\"./data/DF_Genres_List_v1.pkl\",\"wb\"))\n",
+    "\n",
+    "# pickle.dump( df_genres_hashed, open( \"DF_genres_hashed.pkl\", \"wb\" ) )"
    ]
   },
   {
@@ -2982,7 +3000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3004,7 +3022,8 @@
     "        print(high_occuring)\n",
     "        continue\n",
     "    if i[1] > high_occuring[0][1]:\n",
-    "        vals = [(val)] \n",
+    "        vals = [(val)]\n",
+    "        print(vals)\n",
     "    else:\n",
     "        continue\n",
     "\n",
@@ -3124,7 +3143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3235,7 +3254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3287,17 +3306,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'finnish indie'\n",
-      "'bass music'\n",
+      "(\"'finnish indie'\", 317)\n",
+      "added 1st time\n",
+      "(\"'suomi rock'\", 1712)\n",
+      "replaced!\n",
+      "'suomi rock'\n",
+      "(\"'bass music'\", 888)\n",
+      "added 1st time\n",
+      "(\"'scottish electronic'\", 140)\n",
+      "(\"'scottish hip hop'\", 30)\n",
+      "(\"'uk experimental electronic'\", 435)\n",
+      "(\"'wonky'\", 1093)\n",
+      "replaced!\n",
+      "'wonky'\n",
+      "(\"'hip hop'\", 10665)\n",
+      "added 1st time\n",
+      "(\"'new jack swing'\", 3460)\n",
+      "(\"'rap'\", 10578)\n",
       "'hip hop'\n",
-      "'bolero'\n",
+      "(\"'bolero'\", 2683)\n",
+      "added 1st time\n",
+      "(\"'mariachi'\", 1685)\n",
+      "(\"'ranchera'\", 5307)\n",
+      "replaced!\n",
+      "'ranchera'\n",
+      "(\"'swedish indie rock'\", 1053)\n",
+      "added 1st time\n",
       "'swedish indie rock'\n"
      ]
     }
@@ -3308,11 +3349,14 @@
     "    for genre in item:\n",
     "        genre = genre.strip(\" \")\n",
     "        for i in df_genres[\"genres\"].value_counts()[df_genres[\"genres\"].value_counts().index == genre].iteritems():\n",
+    "            print(i)\n",
     "            if high_occuring == []:\n",
-    "                high_occuring.append(i)\n",
+    "                high_occuring = [(i)]\n",
+    "                print(\"added 1st time\")\n",
     "                continue\n",
     "            if i[1] > high_occuring[0][1]:\n",
-    "                vals = [(val)] \n",
+    "                print(\"replaced!\")\n",
+    "                high_occuring = [(i)] \n",
     "            else:\n",
     "                continue\n",
     "\n",
@@ -3322,7 +3366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3332,12 +3376,62 @@
     "        genre = genre.strip(\" \")   \n",
     "        for i in df_genres[\"genres\"].value_counts()[df_genres[\"genres\"].value_counts().index == genre].iteritems():\n",
     "            if high_occuring == []:\n",
-    "                high_occuring.append(i)\n",
+    "                high_occuring = [(i)]\n",
     "                continue\n",
     "            if i[1] > high_occuring[0][1]:\n",
-    "                vals = [(val)] \n",
+    "                high_occuring = [(i)] \n",
     "            else:\n",
     "                continue\n",
+    "    print (high_occuring[0][0])    \n",
+    "    return high_occuring[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'suomi rock'\n",
+      "'wonky'\n",
+      "'hip hop'\n",
+      "'ranchera'\n",
+      "'swedish indie rock'\n",
+      "'semba'\n",
+      "'europop'\n",
+      "'new wave pop'\n",
+      "'groove metal'\n",
+      "'post-hardcore'\n"
+     ]
+    }
+   ],
+   "source": [
+    "df[\"most_pop_genre\"] = df[\"pop_genres\"][:10].apply(keep_highest_occuring)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def keep_highest_occuring_2(list):\n",
+    "    val_counts_array = np.array(df_genres[\"genres\"].value_counts().reset_index())\n",
+    "    high_occuring = []\n",
+    "    for genre in list:\n",
+    "        genre = genre.strip(\" \")   \n",
+    "        for i in val_counts_array:\n",
+    "            if i[0] == genre:\n",
+    "                if high_occuring == []:\n",
+    "                    high_occuring = [(i)]\n",
+    "                    continue\n",
+    "                if i[1] > high_occuring[0][1]:\n",
+    "                    high_occuring = [(i)] \n",
+    "                else:\n",
+    "                    continue\n",
     "    return high_occuring[0][0]"
    ]
   },
@@ -3347,7 +3441,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"most_pop_genre\"] = df[\"pop_genres\"].apply(keep_highest_occuring)"
+    "df[\"most_pop_genre\"] = df[\"pop_genres\"].apply(keep_highest_occuring_2)"
    ]
   },
   {
