--- a/Flask_notebooks/Flask_Notebook.ipynb
+++ b/Flask_notebooks/Flask_Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,43 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "            User authentication requires interaction with your\n",
-      "            web browser. Once you enter your credentials and\n",
-      "            give authorization, you will be redirected to\n",
-      "            a url.  Paste that url you were directed to to\n",
-      "            complete the authorization.\n",
-      "\n",
-      "        \n",
-      "Opened https://accounts.spotify.com/authorize?client_id=b954b92b9a674e6a9cf7322649da82d1&response_type=code&redirect_uri=https%3A%2F%2Fgoogle.com%2F&scope=user-library-read in your browser\n",
-      "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter the URL you were redirected to:  https://www.google.com/?code=AQBA9YISXwisxtIAhKsVLsnovM2M0W1YmsE-LOmis72YKs8wipZimrIkrbl7Xq-xUdZLqoDf1_dKAAL8QV-RGRY6N0nGcI65LYOIfv3Y5aN9j8zn03X9_HxBc5e31V7bfPjd23oTYB-8WHTRBlhpYo6_uCX-lxeYT4UyfB_mw0BY6PMP8ednN4YNC1hH2D-NEO-R5bQ0i-G5TMDQ\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "USERNAME = 'augt12ocf9csxa4s8kbq9reg8' #your spotify username\n",
     "CLIENT_ID = 'b954b92b9a674e6a9cf7322649da82d1' #set at your developer account\n",
@@ -334,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# From predict.py"
+    "# From predict.py - Production"
    ]
   },
   {
@@ -391,38 +357,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<spotipy.client.Spotify at 0x10841b630>"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def get_features(song_id,sp):\n",
-    "    results_dict = sp.audio_features(song_id)[0]\n",
-    "    audio_features = {\n",
-    "        \"audio_features\": {\n",
-    "            key: results_dict[key] for key in results_dict.keys() & {\n",
-    "                'danceability',\n",
-    "                'energy',\n",
-    "                'key',\n",
-    "                'loudness',\n",
-    "                'mode',\n",
-    "                'speechiness',\n",
-    "                'acousticness',\n",
-    "                'instrumentalness',\n",
-    "                'liveness',\n",
-    "                'valence',\n",
-    "                'tempo',\n",
-    "                'time_signature'}}}\n",
-    "\n",
-    "    return audio_features"
+    "sp.audio"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
-    "content = get_features(song_id,sp)"
+    "def get_acoustical_features(song_id,sp):\n",
+    "    return sp.audio_features(song_id)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_popularity(trackID):\n",
+    "    return sp.track(trackID)['popularity']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_artist_id(trackID):\n",
+    "    return sp.track(trackID)['artists'][0]['id']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_genres(artistID):\n",
+    "    return sp.artist(artistID)['genres']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Sound_Drip:\n",
+    "    \n",
+    "    def __init__(self, token):\n",
+    "        self.token = token\n",
+    "    \n",
+    "#     def instantiate_sp(token):\n",
+    "#         sp = spotipy.Spotify(auth=token)\n",
+    "#         return sp\n",
+    "        \n",
+    "#     def instantiate_sp(token):\n",
+    "#         sp = spotipy.Spotify(auth=token)\n",
+    "#         return sp\n",
+    "\n",
+    "#     def get_id(sp):\n",
+    "#         results = sp.current_user_saved_tracks()\n",
+    "#         song_id = results['items'][0]['track']['id']\n",
+    "#         return song_id\n",
+    "\n",
+    "#     def get_acoustical_features(song_id,sp):\n",
+    "#         acoustical_features = sp.audio_features(song_id)[0]\n",
+    "\n",
+    "#     def get_popularity(song_id):\n",
+    "#         popularity =  sp.track(song_id)['popularity']\n",
+    "\n",
+    "#     def get_artist_id(song_id):\n",
+    "#         artist = sp.track(song_id)['artists'][0]['id']\n",
+    "\n",
+    "#     def get_genres(artist):\n",
+    "#         genre = sp.artist(artist)['genres']\n",
+    "\n",
+    "    \n",
+    "#     audio_features = {\n",
+    "#         \"audio_features\": {\n",
+    "#             key: results_dict[key] for key in results_dict.keys() & {\n",
+    "#                 'danceability',\n",
+    "#                 'energy',\n",
+    "#                 'key',\n",
+    "#                 'loudness',\n",
+    "#                 'mode',\n",
+    "#                 'speechiness',\n",
+    "#                 'acousticness',\n",
+    "#                 'instrumentalness',\n",
+    "#                 'liveness',\n",
+    "#                 'valence',\n",
+    "#                 'tempo',\n",
+    "#                 'time_signature'}}}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Sound_Drip at 0x15a2d3be0>"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Sound_Drip(token)"
    ]
   },
   {
@@ -431,6 +495,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Updated function - Not in Flask - \n",
+    "\n",
     "def predictfunc(content):\n",
     "    similar_songs = []\n",
     "    print('Loading dataframe...')\n",
@@ -454,6 +520,7 @@
     "    \n",
     "    results = model.kneighbors([data_scaled][0])[1]\n",
     "#     genre filtering\n",
+    "\n",
     "    print('Prediction executed')\n",
     "    print('song_id_list loading...')\n",
     "    song_id_list = pickle.load(open('data/old_song_array.pkl', 'rb'))\n",
@@ -464,7 +531,7 @@
     "        song_id = song_id_list[song_row]\n",
     "        similar_songs.append({'similarity': [.99], 'values': song_id})\n",
     "    json_dict = {\"songs\": similar_songs}\n",
-    "    return json_dict\n"
+    "    return json_dict"
    ]
   },
   {
@@ -544,18 +611,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 53,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# import numpy as np\n",
-    "\n",
-    "# old_song_list = load('data/song_id_list2(1).joblib')\n",
-    "\n",
-    "# old_song_array = np.array(old_song_list)\n",
-    "\n",
-    "# pickle.dump(old_song_array, open('data/old_song_array.pkl', 'wb'))"
+    "# For prediction.py - New Functions"
    ]
   },
   {
@@ -567,8 +626,7 @@
     "def filter_model(): \n",
     "    #loop takes KNN results and filters by source track genres\n",
     "    filtered_list = []\n",
-    "    song_list_length = 364\n",
-    "    source_song_index = knn_results1[0][0]\n",
+    "    song_list_length = 20\n",
     "    source_genre_list = genre_array[source_song_index]\n",
     "    for output_song_index in knn_results1[0][1:]:\n",
     "        output_genre_list = genre_array[output_song_index]\n",
@@ -594,6 +652,21 @@
     "                    break\n",
     "            \n",
     "#     print(len(output_song_index_list),\"!!!!!\")    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import numpy as np\n",
+    "\n",
+    "# old_song_list = load('data/song_id_list2(1).joblib')\n",
+    "\n",
+    "# old_song_array = np.array(old_song_list)\n",
+    "\n",
+    "# pickle.dump(old_song_array, open('data/old_song_array.pkl', 'wb'))"
    ]
   }
  ],
